tests/run/error_contract_requires.out
emberc: runtime error: precondition failed in 'clamp' (requires, line 4)
